<resources>
    <string name="app_name">ShopKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="editor_product_name">Product Name</string>
    <string name="editor_list_price">List Price (dollars)</string>
    <string name="editor_initial_quantity">Quantity</string>
    <string name="editor_supplier_contact">Supplier Email Address</string>
    <string name="editor_add_item">Add Item to Inventory</string>
    <string name="editor_edit_item">Edit Item in Inventory</string>
    <string name="unsaved_changes">You have unsaved changes to the current item.</string>
    <string name="unsaved_changes_discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="empty_text">No products to display</string>
    <string name="inventory_menu_new">Create new Item</string>
    <string name="editor_menu_save">Save</string>
    <string name="editor_menu_delete">Delete</string>
    <string name="editor_error_save_new">Error saving new inventory item</string>
    <string name="editor_success_save_new">Item saved to inventory</string>
    <string name="editor_error_update">Failed to update item</string>
    <string name="editor_success_update">Successfully changed item</string>
    <string name="editor_error_delete">Error deleting item</string>
    <string name="editor_success_delete">Item deleted</string>
    <string name="editor_ask_delete">Delete this item?</string>
    <string name="editor_delete_button">Delete</string>
    <string name="editor_cancel_button">Cancel</string>
    <string name="product_icon_description">product icon</string>
    <string name="price_text_view_currency">$</string>
    <string name="open_purchase_order">OPEN PURCHASE ORDER</string>
    <string name="editor_field_icon">Item Icon:</string>
    <string name="increment_button">+</string>
    <string name="decrement_button">-</string>
    <string name="editor_field_name">Name:</string>
    <string name="editor_field_quantity">Quantity:</string>
    <string name="editor_field_price">Price:</string>
    <string name="editor_field_contact">Contact:</string>
    <string name="list_item_name">Name:</string>
    <string name="list_item_stock">Stock:</string>
    <string name="list_item_price">Price ($):</string>
    <string name="editor_add_image_button">Add Image</string>

</resources>

