<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp">
    <ImageView
        android:id="@+id/product_icon"
        android:contentDescription="@string/product_icon_description"
        android:layout_height="match_parent"
        android:layout_width="72dp"
        android:src="@drawable/ic_local_offer_black_48dp"/>
    <LinearLayout
        android:id="@+id/inventory_details"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ListItemHeader"
                android:text="@string/list_item_name"/>
            <TextView
                style="@style/ListItemField"
                android:id="@+id/list_product_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ListItemHeader"
                android:text="@string/list_item_stock"/>
            <TextView
                style="@style/ListItemField"
                android:id="@+id/list_quantity"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/ListItemHeader"
                android:text="@string/list_item_price"/>
            <TextView
                style="@style/ListItemField"
                android:id="@+id/list_price"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/sell_item_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_shopping_cart_white_24dp"
        android:scaleType="center"/>
</LinearLayout>